# Capstone

./: README.md  geocode_cache.json  geocode_cache_bkup2.json  package-lock.json  package.json  pyproject.toml
backend/: main.py  populate.py
backend/database/: config.py  database.py
backend/helpers/ai/: open_ai_api.py
backend/helpers/pdf/: pdf_generator.py
backend/routes/: route_helpers.py
backend/schema/: application.py  cover_letter.py  helper.py  job.py  user.py
