[tool.poetry]
name = "jobquery"
version = "0.1.0"
description = ""
authors = ["Rayze95 <zelsasser11@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.108.0"
uvicorn = "0.25.0"
pytest = "7.4.0"
httpx = "0.26.0"
sqlmodel = "0.0.16"
passlib = "1.7.4"
python-jose = "3.3.0"
bcrypt = "3.2.0"
cryptography = "42.0.2"
python-multipart = "^0.0.9"
python-jobspy = "^1.1.51"
openai = "^1.16.2"
pymongo = "^4.8.0"
jobspy = "^0.29.0"
pillow = "^10.4.0"
mongomock = "^4.2.0.post1"
apscheduler = "^3.10.4"
pymupdf = "^1.24.11"
geopy = "^2.4.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
